estimator with hooks (doesn't work)

--- a/McGregor.ipynb
+++ b/McGregor.ipynb
@@ -245,6 +245,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1, 2, 3]]), array([[4, 5, 6]]), array([[7, 8, 9]])]\n",
+      "[array([[1, 2, 3]]), array([[4, 5, 6]]), array([[7, 8, 9]])]\n",
+      "[array([[1, 2, 3]]), array([[4, 5, 6]]), array([[7, 8, 9]])]\n",
+      "[array([[1, 2, 3]]), array([[4, 5, 6]]), array([[7, 8, 9]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in res:\n",
+    "    sub = np.split(x,3)\n",
+    "    print(sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s: a\n",
+      "l: adsf\n",
+      "s: b\n",
+      "l: bsdf\n",
+      "s: c\n",
+      "l: csdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['a','b','c']\n",
+    "b = ['adsf','bsdf','csdf']\n",
+    "\n",
+    "for s,l in zip(a,b):\n",
+    "    print(\"s:\",s)\n",
+    "    print(\"l:\",l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
