weird stuff in lstm_network

--- a/McGregor.ipynb
+++ b/McGregor.ipynb
@@ -2,37 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[3, 4, 5],\n",
-      "       [5, 6, 7],\n",
-      "       [6, 7, 8],\n",
-      "       [1, 2, 3]])\n",
-      " array([[ 1,  2,  3],\n",
-      "       [12, 32, 12]])\n",
-      " array([[ 1,  2, 23],\n",
-      "       [12,  4, 12]])]\n"
+      "[5611 2433 5311 5051 1184 4555 3385 4117 4843 2904]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "a = np.array([[3,4,5],[5,6,7],[6,7,8],[1,2,3]])\n",
-    "b = np.array([[1,2,3],[12,32,12]])\n",
-    "c = np.array([[1,2,23],[12,4,12]])\n",
-    "l = []\n",
-    "l.append(a)\n",
-    "l.append(b)\n",
-    "l.append(c)\n",
-    "\n",
-    "l = np.array(l)\n",
-    "print(l)"
+    "#np.random.seed(42)\n",
+    "indices = np.random.randint(0, 6384, 10)\n",
+    "print(indices)"
    ]
   },
   {
@@ -623,6 +609,26 @@
     "new_model = tf.keras.models.load_model('/Users/thomasklein/Projects/BremenBigDataChallenge2019/bigdatachallenge/recurrent/model/readout_lstm.h5')\n",
     "new_model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "indices = np.random.randint(0, 6384, 10)\n",
+    "print(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
